  that is a name nested in a sequence of namespaces. For example,
  `-c rpy2.robjects.default_converter` (issue #934).

- The "magic" `%Rpush` accepts an optional argument `-c/--converter` that is
  similar in nature to the argument of the same name in `%R` and `%%R`.

Bugs fixed
----------

- :class:`rpy2.rlike.container.TaggedList` objects were triggering an error when unpickled (issue #947).

Changes
-------

- :meth:`rpy2.robjects.help.Page.iteritems` is deprecated. Use the method `items()` instead.

- Calling :func:`str` on rpy2 objects that are proxies of R objects is now
  using R's `print()` whenever R's `show()` results in an error (issue #908).


Release 3.5.4
=============

New features
------------

- :func:`rpy2.rinterface.rternalize` can optionally mirror more accurately in R
  the function signature defined in Python (issue #905).

Bugs fixed
----------

- Better handling of timezone in :class:`rpy2.robjects.vectors.POSIXct`
  (issue #917).

- :mod:`pandas` conversion is now correctly handling R data frames with duplicated
  column names. They were dropped tbefore that (issue #925).

- :mod:`pandas` conversion is now correctly handling R data frames with nested
  columns (issue #930).

- Importing :mod:`rpy2.ipython.rmagic` while :mod:`pandas` is not installed resulted
  in an error.


Changes
-------

- :func:`rpy2.robjects.methods.getclassdef` is now explicitly
  naming the optional argument with the R package name when calling
  the underlying R function.

- The `%R` line magic for ipython/jupyter was trying to substitute anything
  after a dolar (`$`) sign, which caused issue since this character is
  used to access by name elements in R containers. No substitution
  is happening anymore (issue #922).


Release 3.5.3
=============

Bugs fixed
----------

- Pandas converter no longer fails with arrays of `dtype`
  :class:`pandas.BoolDtype` or :class:`pandas.Float64Dtype`.(issue #880).
